<resources>
    <string name="app_name">CSC202 Assignment</string>
    <string name="title_hint">Enter a Title</string>
    <string name="place_hint">Enter Place</string>
    <string name="title_label">Title</string>
    <string name="place_label">Place</string>
    <string name="details">Details</string>
    <string name="geo_location_label">Geo Loaction</string>
    <string name="btn_share">Share</string>
    <string name="delete_button">Delete</string>
    <string name="delete_record">Delete Record</string>
    <string name="problem_solved">Solved</string>
    <string name="new_record">New Record</string>
    <string name="help">Help</string>
    <string name="plant_report">%1$s!
 The report was discovered on %2$s. %3$s, %4$s
 </string>
    <string name="report_solved">The case is solved</string>
    <string name="report_unsolved">The case is not solved</string>
    <string name="report_subject">Greenspot Report</string>
    <string name="send_report">Send report via</string>
    <string name="delete_confirmation_title">Delete</string>
    <string name="delete_confirmation_message">Are you sure to delete?</string>
    <string name="delete">Delete</string>
    <string name="record_deleted">Record Deleted</string>
    <string name="cancel">Cancel</string>
 </resources>